other minor changes

--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -1,3 +1,17 @@
 ﻿l_english:
- LOADING_TIP_0: "§BWe are unique among the world’s militaries. We don’t take an oath to a country, we don’t take an oath to a tribe, we don’t take an oath to a religion. We don’t take an oath to a king, or a queen, or a tyrant or a dictator.We take an oath to the Constitution and we take an oath to the idea that is America and we’re willing to die to protect it.\n- Mark Milley"
-
+ LOADING_TIP_0: "§BIf Putin exists, then Russia exists. No Putin - no Russia.\n- Vyacheslav Volodin"
+ LOADING_TIP_1: "§BSome foreigners with full bellies and nothing better to do engage in finger-pointing at us. First, China does not export revolution; second, it does not export famine and poverty; and third, it does not mess around with you. So what else is there to say?\n- Xi Jiping"
+ LOADING_TIP_2: "§BThose who believe they can share in government dream senseless dreams.\n- Nicholas II"
+ LOADING_TIP_3: "§BA military is built to fight. Our military must regard combat capability as the criterion to meet in all its work and focus on how to win when it is called on. \n- Xi Jiping"
+ LOADING_TIP_4: "§BNobody should pin their hopes on a miracle.\n- Vladimir Putin"
+ LOADING_TIP_5: "§BThe weak are beaten, and the winners go on to forge thier own world order.\n- Vladimir Putin"
+ LOADING_TIP_6: "§BWe are unique among the world’s militaries. We take an oath to the Constitution and we take an oath to the idea that is America and we’re willing to die to protect it.\n- Mark Milley"
+ LOADING_TIP_7: "§BThe KGB in Russia will never die. Only its names are mortal."
+ LOADING_TIP_8: "§BYou are blind like young kittens. What will happen without me? The country will perish because you do not know how to recognize enemies.\n- Joseph Stalin"
+ LOADING_TIP_9: "§BSomeone asked me about a travel visa. We don't need travel visas, we only need an order from the Supreme Commander."
+ LOADING_TIP_10: "§BI can not live when my Motherland is dying and everything I considered the meaning of my life is destroyed.\n- Boris Pugo"
+ LOADING_TIP_11: "§BThe Russian people are like children they will never take up the alphabet if they are not dependent on the master.\n- Peter the Great"
+ LOADING_TIP_12: "§B"
+ LOADING_TIP_13: "§B"
+ LOADING_TIP_14: "§B"
+ LOADING_TIP_15: "§B"
