Quotes finished for now

--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -8,10 +8,39 @@
  LOADING_TIP_6: "§BWe are unique among the world’s militaries. We take an oath to the Constitution and we take an oath to the idea that is America and we’re willing to die to protect it.\n- Mark Milley"
  LOADING_TIP_7: "§BThe KGB in Russia will never die. Only its names are mortal."
  LOADING_TIP_8: "§BYou are blind like young kittens. What will happen without me? The country will perish because you do not know how to recognize enemies.\n- Joseph Stalin"
- LOADING_TIP_9: "§BSomeone asked me about a travel visa. We don't need travel visas, we only need an order from the Supreme Commander."
+ LOADING_TIP_9: "§BSomeone asked me about a travel visa. We don't need travel visas, we only need an order from the Supreme Commander.\n- Vladimir Shamanov"
  LOADING_TIP_10: "§BI can not live when my Motherland is dying and everything I considered the meaning of my life is destroyed.\n- Boris Pugo"
  LOADING_TIP_11: "§BThe Russian people are like children they will never take up the alphabet if they are not dependent on the master.\n- Peter the Great"
- LOADING_TIP_12: "§B"
- LOADING_TIP_13: "§B"
- LOADING_TIP_14: "§B"
- LOADING_TIP_15: "§B"
+ LOADING_TIP_12: "§BA market that's as open as possible is the precondition for a successful economy, and a successful economy is the precondition to being able to pay for social security.\n- Gerhard Schröder"
+ LOADING_TIP_13: "§BIn the fight between you and the world, back the world.\n- Franz Kafka"
+ LOADING_TIP_14: "§BChina will always remain the builder of world peace, a contributor to global development, and upholder of international order.\n- Xi Jiping"
+ LOADING_TIP_15: "§BSeeing the light, our politicians shouted 'Freedom, freedom!' But it turned out to be a rag that had been pulled from a cage.\n- Grigori Yavlinski"
+ LOADING_TIP_16: "§BThe sinews of war are not gold, but good soliders;for gold alone will not procure good soliders, but good soliders will always procure gold.\n- Niccolo Machiavelli"
+ LOADING_TIP_17: "§BWhat I'm saying is cast in stone.\n- Dmitrii Medvedev"
+ LOADING_TIP_18: "§BThe history of liberty is a history of resistance. The history of liberty is a history of the limitation of government power.\n- Wiston Churchill"
+ LOADING_TIP_19: "§BI think the power in Russia will not change as a result of elections.\n- Alexey Navalny"
+ LOADING_TIP_20: "§BNationalism is a positive value and benefit, creative affirmation, revelation and development of individual national life.\n- Nikolai Berdyaev"
+ LOADING_TIP_21: "§BA hero can be anyone, even a man doing something as simple and reassuring as putting a coat on a young boy’s shoulders to let him know the world hadn’t ended.\n- Christopher Nolan"
+ LOADING_TIP_22: "§BWe rise to challenges, we will meet them, we're well prepared for them, we'll get through them and we'll emerge on the other side stronger.\n- Rishi Sunak"
+ LOADING_TIP_23: "§BThe Russian invasion of Ukraine marks a turning point. It is our duty to do our best to support Ukraine in defending itself against Putin's invading army.\n- Olaf Scholz"
+ LOADING_TIP_24: "§BI have tried to lift France out of the mud. But she will return to her errors and vomitings. I cannot prevent the French from being French.\n- Charles de Gaulle"
+ LOADING_TIP_25: "§BElection days come and go. But the struggle of the people to create a government which represents all of us and not just the one percent - a government based on the principles of economic, social, racial and environmental justice - that struggle continues.\n- Bernie Sanders"
+ LOADING_TIP_26: "§BGo back to history. Ask your grandfathers: what is it like to talk to Russia from a positon of strenght.\n- Sergey Shoigu"
+ LOADING_TIP_27: "§BDiplomacy is juggling with words, bombs and smiles.\n- "
+ LOADING_TIP_28: "§BValues are more important than money.\n- Viktor Orban"
+ LOADING_TIP_29: "§BThere are 350000 bayonets behind my back!\n- Viktor Zolotov"
+ LOADING_TIP_30: "§BWe no longer have oligharcs.\n- Vladimir Putin"
+ LOADING_TIP_31: "§BI'm Putins infantryman and defender of Russia.\n- Razman Kadyrov"
+ LOADING_TIP_32: "§BEvery policeman knows that thaough governments may change, the police remain.\n- Lev Trotsky"
+ LOADING_TIP_33: "§BMy hands are clean, but if I become president they will be covered in blood.\n- "
+ LOADING_TIP_34: "§BRussia is obliged to protect the Russian people, otherwise it loses its meaning as a state.\n- Igor Strelkov"
+ LOADING_TIP_35: "§BFreedom is better than non-freedom.\n- Dmitrii Medvedev"
+ LOADING_TIP_36: "§BI go crazy when I thjink about the prospects of Russia. We will become the greatest nation, greatest state, everything in the world will be done with our permission.\n- Nicholas II"
+ LOADING_TIP_37: "§BProgress is inevetable, its cessation would mean the death of civilization.\n- Andrei Sakharov"
+ LOADING_TIP_38: "§BIf justice perishes, human life on earth has lost its meaning.\n- Immanuel Kant"
+ LOADING_TIP_39: "§BThe realization of our nations desire to have a better life is what we're fighting for.\n- Xi Jiping"
+ LOADING_TIP_40: "§BThere's no longer any left or right. There's the system and the enemies of the system.\n- Eduard Limonov"
+ LOADING_TIP_41: "§BFreedom is like a romantic relationship. Once you gain it, it seems to last forever, but it's only temporary.\n- Svyatoslav Varachuk"
+ LOADING_TIP_42: "§BThe object of persecution is persecution. The object of torture is torture. The object of power is power.\n- George Orwell"
+ LOADING_TIP_43: "§BIf you gaze too long into the abyss, the abyss gazes also into you.\n- Friedrich Neitzsche"
+ LOADING_TIP_44: "§BI don't know wether my soul is Ukranian or Russian. All I know is that I would never give preference to someone from Russia or Little Russia.\n- Nikaolai Gogol"
