LOADING SCREENS 1(UNCOMPLETED)

--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -25,7 +25,7 @@
  LOADING_TIP_23: "§BThe Russian invasion of Ukraine marks a turning point. It is our duty to do our best to support Ukraine in defending itself against Putin's invading army.\n- Olaf Scholz"
  LOADING_TIP_24: "§BI have tried to lift France out of the mud. But she will return to her errors and vomitings. I cannot prevent the French from being French.\n- Charles de Gaulle"
  LOADING_TIP_25: "§BElection days come and go. But the struggle of the people to create a government which represents all of us and not just the one percent - a government based on the principles of economic, social, racial and environmental justice - that struggle continues.\n- Bernie Sanders"
- LOADING_TIP_26: "§BGo back to history. Ask your grandfathers: what is it like to talk to Russia from a positon of strenght.\n- Sergey Shoigu"
+ LOADING_TIP_26: "§BGo back to history. Ask your grandfathers: what is it like to talk to Russia from a positon of strength.\n- Sergey Shoigu"
  LOADING_TIP_27: "§BDiplomacy is juggling with words, bombs and smiles.\n- "
  LOADING_TIP_28: "§BValues are more important than money.\n- Viktor Orban"
  LOADING_TIP_29: "§BThere are 350000 bayonets behind my back!\n- Viktor Zolotov"
