other minor changed, main theme and music station finished for now

--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -6,7 +6,7 @@
  LOADING_TIP_4: "§BNobody should pin their hopes on a miracle.\n- Vladimir Putin"
  LOADING_TIP_5: "§BThe weak are beaten, and the winners go on to forge thier own world order.\n- Vladimir Putin"
  LOADING_TIP_6: "§BWe are unique among the world’s militaries. We take an oath to the Constitution and we take an oath to the idea that is America and we’re willing to die to protect it.\n- Mark Milley"
- LOADING_TIP_7: "§BThe KGB in Russia will never die. Only its names are mortal."
+ LOADING_TIP_7: "§BThe KGB in Russia will never die. Only its names are mortal.\n- Leonid Shebarshin"
  LOADING_TIP_8: "§BYou are blind like young kittens. What will happen without me? The country will perish because you do not know how to recognize enemies.\n- Joseph Stalin"
  LOADING_TIP_9: "§BSomeone asked me about a travel visa. We don't need travel visas, we only need an order from the Supreme Commander.\n- Vladimir Shamanov"
  LOADING_TIP_10: "§BI can not live when my Motherland is dying and everything I considered the meaning of my life is destroyed.\n- Boris Pugo"
@@ -26,13 +26,13 @@
  LOADING_TIP_24: "§BI have tried to lift France out of the mud. But she will return to her errors and vomitings. I cannot prevent the French from being French.\n- Charles de Gaulle"
  LOADING_TIP_25: "§BElection days come and go. But the struggle of the people to create a government which represents all of us and not just the one percent - a government based on the principles of economic, social, racial and environmental justice - that struggle continues.\n- Bernie Sanders"
  LOADING_TIP_26: "§BGo back to history. Ask your grandfathers: what is it like to talk to Russia from a positon of strength.\n- Sergey Shoigu"
- LOADING_TIP_27: "§BDiplomacy is juggling with words, bombs and smiles.\n- "
+ LOADING_TIP_27: "§BDiplomacy is juggling with words, bombs and smiles.\n- Evgeny Glushakov"
  LOADING_TIP_28: "§BValues are more important than money.\n- Viktor Orban"
  LOADING_TIP_29: "§BThere are 350000 bayonets behind my back!\n- Viktor Zolotov"
  LOADING_TIP_30: "§BWe no longer have oligharcs.\n- Vladimir Putin"
  LOADING_TIP_31: "§BI'm Putins infantryman and defender of Russia.\n- Razman Kadyrov"
  LOADING_TIP_32: "§BEvery policeman knows that thaough governments may change, the police remain.\n- Lev Trotsky"
- LOADING_TIP_33: "§BMy hands are clean, but if I become president they will be covered in blood.\n- "
+ LOADING_TIP_33: "§BMy hands are clean, but if I become president they will be covered in blood.\n- Vladimir Zhirovinsky"
  LOADING_TIP_34: "§BRussia is obliged to protect the Russian people, otherwise it loses its meaning as a state.\n- Igor Strelkov"
  LOADING_TIP_35: "§BFreedom is better than non-freedom.\n- Dmitrii Medvedev"
  LOADING_TIP_36: "§BI go crazy when I thjink about the prospects of Russia. We will become the greatest nation, greatest state, everything in the world will be done with our permission.\n- Nicholas II"
