--- a/localisation/music_station_l_english.yml
+++ b/localisation/music_station_l_english.yml
@@ -1,3 +1,4 @@
 ﻿l_english:
- iw_test_station_TITLE:0 "Test Station"
- test_song:0 "Test Song"
+ tmw_songs_TITLE:0 "TMW Soundtrack"
+ maintheme:0 "Dyadya Vova my s toboi"
+ alliestheme:0 "Allies Theme"
