--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -10,7 +10,7 @@
  LOADING_TIP_8: "§BYou are blind like young kittens. What will happen without me? The country will perish because you do not know how to recognize enemies.\n- Joseph Stalin"
  LOADING_TIP_9: "§BSomeone asked me about a travel visa. We don't need travel visas, we only need an order from the Supreme Commander.\n- Vladimir Shamanov"
  LOADING_TIP_10: "§BI can not live when my Motherland is dying and everything I considered the meaning of my life is destroyed.\n- Boris Pugo"
- LOADING_TIP_11: "§BThe Russian people are like children they will never take up the alphabet if they are not dependent on the master.\n- Peter the Great"
+ LOADING_TIP_11: "§BThe Russian people are like children. They will never take up the alphabet if they are not dependent on the master.\n- Peter the Great"
  LOADING_TIP_12: "§BA market that's as open as possible is the precondition for a successful economy, and a successful economy is the precondition to being able to pay for social security.\n- Gerhard Schröder"
  LOADING_TIP_13: "§BIn the fight between you and the world, back the world.\n- Franz Kafka"
  LOADING_TIP_14: "§BChina will always remain the builder of world peace, a contributor to global development, and upholder of international order.\n- Xi Jiping"
