ideology change and province change

--- a/localisation/english/TMW_countries_l_english.yml
+++ b/localisation/english/TMW_countries_l_english.yml
@@ -6,7 +6,7 @@
  ### ╚██████╗╚██████╔╝╚██████╔╝██║ ╚████║   ██║   ██║  ██║   ██║       ██║ ╚████║██║  ██║██║ ╚═╝ ██║███████╗███████║ ###
  ###  ╚═════╝ ╚═════╝  ╚═════╝ ╚═╝  ╚═══╝   ╚═╝   ╚═╝  ╚═╝   ╚═╝       ╚═╝  ╚═══╝╚═╝  ╚═╝╚═╝     ╚═╝╚══════╝╚══════╝ ###
  ## Country tags are sorted alphabetically
- ## MAKE SURE THAT WHATEVER YOU ADD CONFORMS TO THE ALPHABETICAL ORDER
+ ## MAKE SURE THAT WHATEVER YOU ADD CONFORMS TO the ALPHABETICAL ORDER
  ## If not then I'm going to appear on your bedroom at 2AM brandishing an axe
  
  # A
@@ -15,7 +15,7 @@
  AFG_ADJ: "Afghani"
 
  ALB: "Republic of Albania"
- ALB_DEF: "The Republic of Albania"
+ ALB_DEF: "the Republic of Albania"
  ALB_ADJ: "Albanian"
 
  AST: "Commonwealth of Australia"
@@ -23,12 +23,12 @@
  AST_ADJ: "Australian"
 
  AUS: "Republic of Austria"
- AUS_DEF: "The Republic of Austria"
+ AUS_DEF: "the Republic of Austria"
  AUS_ADJ: "Austrian"
  
  # B
  BEL: "Kingdom of Belgium"
- BEL_DEF: "The Kingdom of Belgium"
+ BEL_DEF: "the Kingdom of Belgium"
  BEL_ADJ: "Belgian"
 
  BRM: "Republic of the Union of Myanmar"
@@ -45,11 +45,11 @@
  CHI_ADJ: "Chinese"
 
  CRO: "Republic of Croatia"
- CRO_DEF: "The Republic of Croatia"
+ CRO_DEF: "the Republic of Croatia"
  CRO_ADJ: "Croatian"
 
  CZE_ONLY: "Czech Autonomous Special Zone"
- CZE_ONLY_DEF: "The Czech Autonomous Special Zone"
+ CZE_ONLY_DEF: "the Czech Autonomous Special Zone"
  CZE_ONLY_ADJ: "Czech"
  
  # D
@@ -60,13 +60,13 @@
  
  # E
  ENG: "United Kingdom"
- ENG_DEF: "The United Kingdom"
+ ENG_DEF: "the United Kingdom"
  ENG_ADJ: "British"
  
  
  # F
  FRA: "French Republic"
- FRA_DEF: "The French Republic"
+ FRA_DEF: "the French Republic"
  FRA_ADJ: "French"
  
  
@@ -77,11 +77,11 @@
  GAL_ADJ: "Lvovskayan"
  
  GER: "Federal Republic of Germany"
- GER_DEF: "The Federal Republic of Germany"
+ GER_DEF: "the Federal Republic of Germany"
  GER_ADJ: "German"
  
  GRE: "Hellenic Republic"
- GRE_DEF: "The Hellenic Republic"
+ GRE_DEF: "the Hellenic Republic"
  GRE_ADJ: "Greek"
 
  GRN: "Greenland"
@@ -90,7 +90,7 @@
  
  # H
  HOL: "Kingdom of the Netherlands"
- HOL_DEF: "The Kingdom of the Netherlands"
+ HOL_DEF: "the Kingdom of the Netherlands"
  HOL_ADJ: "Dutch"
  
  HUN: "Hungary"
@@ -116,7 +116,7 @@
  IRE_ADJ: "Irish"
 
  ITA: "Italian Republic"
- ITA_DEF: "The Italian Republic"
+ ITA_DEF: "the Italian Republic"
  ITA_ADJ: "Italian"
  
  # J
@@ -145,7 +145,7 @@
  LAO_ADJ: "Lao"
 
  LUX: "Grand Duchy of Luxembourg"
- LUX_DEF: "The Grand Duchy of Luxembourg"
+ LUX_DEF: "the Grand Duchy of Luxembourg"
  LUX_ADJ: "Luxembourger"
  
  
@@ -154,8 +154,8 @@
  MAL_DEF: "Malaysia"
  MAL_ADJ: "Malaysian"
 
- MDV: "Pridnestroovskaya Moldavskaya Respublika"
- MDV_DEF: "Pridnestrovskaya Moldavskaya Respublika"
+ MDV: "Moldova"
+ MDV_DEF: "the Republic of Moldova"
  MDV_ADJ: "Moldovan"
 
  MLD: "Republic of Maldives"
@@ -165,7 +165,7 @@
  
  # N
  NOR: "Kingdom of Norway"
- NOR_DEF: "The Kingdom of Norway"
+ NOR_DEF: "the Kingdom of Norway"
  NOR_ADJ: "Norwegian"
 
  NEP: "Federal Democratic Republic of Nepal"
@@ -194,7 +194,7 @@
  POL_ADJ: "Polish"
 
  POR: "Portuguese Republic"
- POR_DEF: "The Portuguese Republic"
+ POR_DEF: "the Portuguese Republic"
  POR_ADJ: "Portuguese"
  
  
@@ -211,8 +211,12 @@
  RUS_ADJ: "Russian"
  
  # S
+ SAF: "Republic of South Africa"
+ SAF_DEF: "the Republic of South Africa"
+ SAF_ADJ: "South African"
+ 
  SER: "Republic of Serbia"
- SER_DEF: "The Republic of Serbia"
+ SER_DEF: "the Republic of Serbia"
  SER_ADJ: "Serbian"
 
  SIA: "Kingdom of Thailand"
@@ -220,15 +224,15 @@
  SIA_ADJ: "Thai"
 
  SLO: "Slovako-Czech Republic"
- SLO_DEF: "The Slovako-Czech Republic"
+ SLO_DEF: "the Slovako-Czech Republic"
  SLO_ADJ: "Slovako-Czech"
 
  SLV: "Republic of Slovenia"
- SLV_DEF: "The Republic of Slovenia"
+ SLV_DEF: "the Republic of Slovenia"
  SLV_ADJ: "Slovene"
 
  SPR: "Spanish Republic"
- SPR_DEF: "The Spanish Republic"
+ SPR_DEF: "the Spanish Republic"
  SPR_ADJ: "Spanish"
 
  SRL: "Democratic Socialist Republic of Sri Lanka"
@@ -236,11 +240,11 @@
  SRL_ADJ: "Sri Lankan"
 
  SWE: "Independent State of Sweden"
- SWE_DEF: "The Independent State of Sweden"
+ SWE_DEF: "the Independent State of Sweden"
  SWE_ADJ: "Swedish"
 
  SWI: "Swiss Confederation"
- SWI_DEF: "The Swiss Confederation"
+ SWI_DEF: "the Swiss Confederation"
  SWI_ADJ: "Swiss"
  
  # T
