ideology change and province change

--- a/localisation/english/TMW_countries_l_english.yml
+++ b/localisation/english/TMW_countries_l_english.yml
@@ -6,38 +6,38 @@
  ### ╚██████╗╚██████╔╝╚██████╔╝██║ ╚████║   ██║   ██║  ██║   ██║       ██║ ╚████║██║  ██║██║ ╚═╝ ██║███████╗███████║ ###
  ###  ╚═════╝ ╚═════╝  ╚═════╝ ╚═╝  ╚═══╝   ╚═╝   ╚═╝  ╚═╝   ╚═╝       ╚═╝  ╚═══╝╚═╝  ╚═╝╚═╝     ╚═╝╚══════╝╚══════╝ ###
  ## Country tags are sorted alphabetically
- ## MAKE SURE THAT WHATEVER YOU ADD CONFORMS TO THE ALPHABETICAL ORDER
+ ## MAKE SURE THAT WHATEVER YOU ADD CONFORMS TO the ALPHABETICAL ORDER
  ## If not then I'm going to appear on your bedroom at 2AM brandishing an axe
  
  # A
  AFG: "Islamic Republic of Afghanistan"
- AFG_DEF: "The Islamic Republic of Afghanistan"
+ AFG_DEF: "the Islamic Republic of Afghanistan"
  AFG_ADJ: "Afghani"
 
  ALB: "Republic of Albania"
- ALB_DEF: "The Republic of Albania"
+ ALB_DEF: "the Republic of Albania"
  ALB_ADJ: "Albanian"
 
  AST: "Commonwealth of Australia"
- AST_DEF: "The Commonwealth of Australia"
+ AST_DEF: "the Commonwealth of Australia"
  AST_ADJ: "Australian"
 
  AUS: "Republic of Austria"
- AUS_DEF: "The Republic of Austria"
+ AUS_DEF: "the Republic of Austria"
  AUS_ADJ: "Austrian"
  
  # B
  BEL: "Kingdom of Belgium"
- BEL_DEF: "The Kingdom of Belgium"
+ BEL_DEF: "the Kingdom of Belgium"
  BEL_ADJ: "Belgian"
 
  BRM: "Republic of the Union of Myanmar"
- BRM_DEF: "The Republic of the Union of Myanmar"
+ BRM_DEF: "the Republic of the Union of Myanmar"
  BRM_ADJ: "Myanmarese"
  
  # C
  CAM: "Kingdom of Cambodia"
- CAM_DEF: "The Kingdom of Cambodia"
+ CAM_DEF: "the Kingdom of Cambodia"
  CAM_ADJ: "Cambodian"
 
  CHI: "Zhonghua Renmin Gongheguo"
@@ -45,11 +45,11 @@
  CHI_ADJ: "Chinese"
 
  CRO: "Republic of Croatia"
- CRO_DEF: "The Republic of Croatia"
+ CRO_DEF: "the Republic of Croatia"
  CRO_ADJ: "Croatian"
 
  CZE_ONLY: "Czech Autonomous Special Zone"
- CZE_ONLY_DEF: "The Czech Autonomous Special Zone"
+ CZE_ONLY_DEF: "the Czech Autonomous Special Zone"
  CZE_ONLY_ADJ: "Czech"
  
  # D
@@ -60,13 +60,13 @@
  
  # E
  ENG: "United Kingdom"
- ENG_DEF: "The United Kingdom"
+ ENG_DEF: "the United Kingdom"
  ENG_ADJ: "British"
  
  
  # F
  FRA: "French Republic"
- FRA_DEF: "The French Republic"
+ FRA_DEF: "the French Republic"
  FRA_ADJ: "French"
  
  
@@ -77,11 +77,11 @@
  GAL_ADJ: "Lvovskayan"
  
  GER: "Federal Republic of Germany"
- GER_DEF: "The Federal Republic of Germany"
+ GER_DEF: "the Federal Republic of Germany"
  GER_ADJ: "German"
  
  GRE: "Hellenic Republic"
- GRE_DEF: "The Hellenic Republic"
+ GRE_DEF: "the Hellenic Republic"
  GRE_ADJ: "Greek"
 
  GRN: "Greenland"
@@ -90,7 +90,7 @@
  
  # H
  HOL: "Kingdom of the Netherlands"
- HOL_DEF: "The Kingdom of the Netherlands"
+ HOL_DEF: "the Kingdom of the Netherlands"
  HOL_ADJ: "Dutch"
  
  HUN: "Hungary"
@@ -104,11 +104,11 @@
  ICE_ADJ: "Icelandic"
 
  IND: "Republic of India"
- IND_DEF: "The Republic of India"
+ IND_DEF: "the Republic of India"
  IND_ADJ: "Indian"
 
  INS: "Republic of Indonesia"
- INS_DEF: "The Republic of Indonesia"
+ INS_DEF: "the Republic of Indonesia"
  INS_ADJ: "Indonesian"
 
  IRE: "Ireland"
@@ -116,36 +116,36 @@
  IRE_ADJ: "Irish"
 
  ITA: "Italian Republic"
- ITA_DEF: "The Italian Republic"
+ ITA_DEF: "the Italian Republic"
  ITA_ADJ: "Italian"
  
  # J
  JAP: "Republic of Japan"
- JAP_DEF: "The Republic of Japan"
+ JAP_DEF: "the Republic of Japan"
  JAP_ADJ: "Japanese"
  
  
  # K
  KAZ: "Republic of Kazakhstan"
- KAZ_DEF: "The Republic of Kazakhstan"
+ KAZ_DEF: "the Republic of Kazakhstan"
  KAZ_ADJ: "Kazakhstani"
 
  KOR: "Democratic People's Republic of Korea"
- KOR_DEF: "The Democratic People's Republic of Korea"
+ KOR_DEF: "the Democratic People's Republic of Korea"
  KOR_ADJ: "Korean"
 
  KYR: "Kyrgyz Republic"
- KYR_DEF: "The Kyrgyz Republic"
+ KYR_DEF: "the Kyrgyz Republic"
  KYR_ADJ: "Kyrgyz"
  
  
  # L
  LAO: "Lao People's Democratic Republic"
- LAO_DEF: "The Lao People's Democratic Republic"
+ LAO_DEF: "the Lao People's Democratic Republic"
  LAO_ADJ: "Lao"
 
  LUX: "Grand Duchy of Luxembourg"
- LUX_DEF: "The Grand Duchy of Luxembourg"
+ LUX_DEF: "the Grand Duchy of Luxembourg"
  LUX_ADJ: "Luxembourger"
  
  
@@ -159,17 +159,17 @@
  MDV_ADJ: "Moldovan"
 
  MLD: "Republic of Maldives"
- MLD_DEF: "The Republic of Maldives"
+ MLD_DEF: "the Republic of Maldives"
  MLD_ADJ: "Maldive"
  
  
  # N
  NOR: "Kingdom of Norway"
- NOR_DEF: "The Kingdom of Norway"
+ NOR_DEF: "the Kingdom of Norway"
  NOR_ADJ: "Norwegian"
 
  NEP: "Federal Democratic Republic of Nepal"
- NEP_DEF: "The Federal Democratic Republic of Nepal"
+ NEP_DEF: "the Federal Democratic Republic of Nepal"
  NEP_ADJ: "Nepalese"
 
  NZL: "New Zealand"
@@ -186,7 +186,7 @@
  PER_ADK: "Iranian"
 
  PHI: "Republic of the Philippines"
- PHI_DEF: "The Republic of the Philippines"
+ PHI_DEF: "the Republic of the Philippines"
  PHI_ADJ: "Filipino"
  
  POL: "Respublika Pol'sha"
@@ -194,7 +194,7 @@
  POL_ADJ: "Polish"
 
  POR: "Portuguese Republic"
- POR_DEF: "The Portuguese Republic"
+ POR_DEF: "the Portuguese Republic"
  POR_ADJ: "Portuguese"
  
  
@@ -211,41 +211,45 @@
  RUS_ADJ: "Russian"
  
  # S
+ SAF: "Republic of South Africa"
+ SAF_DEF: "the Republic of South Africa"
+ SAF_ADJ: "South African"
+ 
  SER: "Republic of Serbia"
- SER_DEF: "The Republic of Serbia"
+ SER_DEF: "the Republic of Serbia"
  SER_ADJ: "Serbian"
 
  SIA: "Kingdom of Thailand"
- SIA_DEF: "The Kingdom of Thailand"
+ SIA_DEF: "the Kingdom of Thailand"
  SIA_ADJ: "Thai"
 
  SLO: "Slovako-Czech Republic"
- SLO_DEF: "The Slovako-Czech Republic"
+ SLO_DEF: "the Slovako-Czech Republic"
  SLO_ADJ: "Slovako-Czech"
 
  SLV: "Republic of Slovenia"
- SLV_DEF: "The Republic of Slovenia"
+ SLV_DEF: "the Republic of Slovenia"
  SLV_ADJ: "Slovene"
 
  SPR: "Spanish Republic"
- SPR_DEF: "The Spanish Republic"
+ SPR_DEF: "the Spanish Republic"
  SPR_ADJ: "Spanish"
 
  SRL: "Democratic Socialist Republic of Sri Lanka"
- SRL_DEF: "The Democratic Socialist Republic of Sri Lanka"
+ SRL_DEF: "the Democratic Socialist Republic of Sri Lanka"
  SRL_ADJ: "Sri Lankan"
 
  SWE: "Independent State of Sweden"
- SWE_DEF: "The Independent State of Sweden"
+ SWE_DEF: "the Independent State of Sweden"
  SWE_ADJ: "Swedish"
 
  SWI: "Swiss Confederation"
- SWI_DEF: "The Swiss Confederation"
+ SWI_DEF: "the Swiss Confederation"
  SWI_ADJ: "Swiss"
  
  # T
  TAJ: "Republic of Tajikistan"
- TAJ_DEF: "The Republic of Tajikistan"
+ TAJ_DEF: "the Republic of Tajikistan"
  TAJ_ADJ: "Tajikistani"
 
  TMS: "Turkmenistan"
@@ -262,13 +266,13 @@
  UKR_ADJ: "Russian"
 
  UZB: "Republic of Uzbekistan"
- UZB_DEF: "The Republic of Uzbekistan"
+ UZB_DEF: "the Republic of Uzbekistan"
  UZB_ADJ: "Uzbekistani"
  
  
  # V
  VIN: "Republic of Vietnam"
- VIN_DEF: "The Republic of Vietnam"
+ VIN_DEF: "the Republic of Vietnam"
  VIN_ADJ: "Vietnamese"
  
  
