Some province and ideology stuff, started working on croatia and serbia + other fixes

--- a/localisation/english/TMW_Ideologies_l_english.yml
+++ b/localisation/english/TMW_Ideologies_l_english.yml
@@ -162,6 +162,7 @@ despotism_military_junta_subtype: "Military Junta"
 despotism_civilian_dictatorship_subtype: "Civilian Dictatorship"
 despotism_theocracy_subtype: "Theocracy"
 despotism_papacy_subtype: "Papacy"
+despotism_kleptocracy_subtype: "Kleptocracy"
 despotism_eurasianism_subtype: "Eurasianism"
 despotism_interim_government_subtype: "Interim Government"
 despotism_colonial_government_subtype: "Colonial Government"
