--- a/localisation/english/TMW_victory_points_l_english.yml
+++ b/localisation/english/TMW_victory_points_l_english.yml
@@ -1283,3 +1283,5 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_12468: "Salto"
  VICTORY_POINTS_10502: "Paysandú"
  VICTORY_POINTS_5165: "Mayor Pablo Lagerenza"
+ VICTORY_POINTS_11577: "Vukovar"
+ VICTORY_POINTS_6647: "Osijek"
