--- a/localisation/english/TMW_Netherlands_l_english.yml
+++ b/localisation/english/TMW_Netherlands_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
 #HOL country names
-HOL: "Kingdom of Netherlands"
-HOL_DEF: "the Kingdom of Netherlands"
+HOL: "Kingdom of the Netherlands"
+HOL_DEF: "the Kingdom of the Netherlands"
 HOL_ADJ: "Dutch"
 
 #parties
