some extra work

--- a/localisation/english/TMW_Germany_l_english.yml
+++ b/localisation/english/TMW_Germany_l_english.yml
@@ -134,6 +134,53 @@ GER_The_Oder_desc: "The memory of Operation Seven Days to the River Rhine is sti
 GER_die_geister_des_jahres_2030: "Die Geister des Jahres 2024"
 GER_die_geister_des_jahres_2030_desc: "Six years. Six years since the Uprising of 2024 wrought disaster and anarchy upon nearly every part of this nation, as the previous ministry was paralysed under its weight. Fortunately, chaos was met by the combined forces of order, and with the joint push-back from both our army and our Russian brothers' garrison, the uprising was crushed utterly.\n\nSince then, an uneasy calm has returned to the nation, and the Schröder Chancellorship's enlightened rule has caused prosperity to return to Britain, VDN membership to increase, and the extreme ideological splits between ruscists and non-ruscists in our Party to become workable.\n\nHowever, all reports from the Bundesnachrichtendienst indicate the same thing - DWTDK activity is increasing again, and the terrorists are beginning to reemerge in areas where they have not been active since the Uprising. We must not make the mistakes our predecessors did, and thus we must begin to take preemptive measures."
 
+GER_desperate_measures: "Desperate Measures"
+GER_desperate_measures_desc: "Placeholder."
+
+GER_discussions_with_the_dreamer: "Discussions with the dreamer"
+GER_discussions_with_the_dreamer_desc: "Placeholder."
+
+GER_their_voices_our_ears: "Their Voices in our Ears"
+GER_their_voices_our_ears_desc: "Placeholder."
+
+GER_small_talk_with_franz: "Small Talk with Franz"
+GER_small_talk_with_franz_desc: "Placeholder."
+
+GER_their_dreams_fulfilled: "Their Dreams Fuffilled"
+GER_their_dreams_fulfilled_desc: "Placeholder."
+
+GER_conversations_with_moscow: "Conversations with Moscow"
+GER_conversations_with_moscow_desc: "Placeholder."
+
+GER_this_is_our_bnd: "This is our BND"
+GER_this_is_our_bnd_desc: "Placeholder."
+
+GER_GER_the_unmasked_ones: "The Unmasked Ones"
+GER_GER_the_unmasked_ones_desc: "Placeholder."
+
+GER_bin_ich_der_feind: "Bin ich der Feind?"
+GER_bin_ich_der_feind_desc: "Placeholder."
+
+GER_the_ballad_of_martin_schirdewan: "The Ballad of Martin Schirdewan"
+GER_the_ballad_of_martin_schirdewan_desc: "Placeholder."
+
+GER_the_old_mans_gambit: "The Old Mans Gambit"
+GER_the_old_mans_gambit_desc: "Placeholder."
+
+GER_so_muss_es_sein: "So Muss es Sein"
+GER_so_muss_es_sein_desc: "Placeholder."
+
+GER_freiheit_fur_alle: "Freiheit für Alle"
+GER_freiheit_fur_alle_desc: "Placeholder."
+
+GER_the_two_for_our_future: "The Two for our Future"
+GER_the_two_for_our_future_desc: "Placeholder."
+
+GER_now_this_is_our_future: "Now this is out Future..."
+GER_now_this_is_our_future_desc: "Placeholder."
+
+GER_the_unmasked_ones: "The Unmasked Ones"
+GER_the_unmasked_ones_desc: "Placeholder."
 
 #   Intro Tree
 #   Collab Pre-Uprising Tree 
